@@ -1,7 +1,7 @@
 Package: Pigengene
 Type: Package
 Title: Infers biological signatures from gene expression data
-Version: 1.1.2
+Version: 1.1.4
 Date: 2016-03-24
 Author: Habil Zare, Amir Foroushani, and Rupesh Agrahari
 Maintainer: Habil Zare <zare@txstate.edu>
