@@ -9,14 +9,14 @@ vers <- paste("R package version", meta$Version)
 
 citEntry(entry="Article",
         author = "Amir Foroushani and et al.",
-        title = "{Large-scale gene network analysis reveals the significance of extracellular matrix pathway and homeobox genes in acute myeloid leukemia}",
-        journal = "In preparation",
-        year = "2016",
-        volume = "",
-        number = "",
-        pages = "",
-        month = "",
+        title = "{Large-scale gene network analysis reveals the significance of extracellular matrix pathway and homeobox genes in acute myeloid leukemia: an introduction to the Pigengene package and its applications}",
+        journal = "BMC Medical Genomics",
+        year = "2017",
+        volume = "10",
+        number = "1",
+        pages = "16",
+        month = "3",
 
         textVersion = paste("Amir Foroushani et al.", "(2016) ",  
-        "Large-scale gene network analysis reveals the significance of extracellular matrix pathway and homeobox genes in acute myeloid leukemia, Foroushani et al., In preparation. ", 
-        "URL: http://oncinfo.org/", ".", sep=""))
+        "Large-scale gene network analysis reveals the significance of extracellular matrix pathway and homeobox genes in acute myeloid leukemia: an introduction to the Pigengene package and its applications, Foroushani et al., BMC Medical Genomics. ", 
+        "URL: https://bmcmedgenomics.biomedcentral.com/articles/10.1186/s12920-017-0253-6", ".", sep=""))
