@@ -1,10 +1,21 @@
 \name{NEWS}
 \title{News for \R Package \pkg{Pigenegene}}
 
-\section{Changes in version 0.99.25 (2016-10-02)}{
+\section{Changes in version 1.1.4 (2017-03-37)}{
   \subsection{Changes in existing functions}{
     \itemize{
       \item The compute.pigengene() function now uses welch.pvalue() instead of pvalues.manov().
+    }
+  }
+}
+
+\section{Changes in version 0.99.25 (2016-10-02)}{
+  \subsection{Changes in existing functions}{
+    \itemize{
+      \item The module.heatmap() function now has the doAddEigengene
+      argument.
+      \item The compute.pigengene()  function now reports also the size of
+      modules in the pigengene_pvalue.csv output file.
     }
   }
 }
